# py-pkmn-wrapper

./: README.md  pokedex.py  pyproject.toml
pokeapi_wrapper/: api.py
pokeapi_wrapper/examples/: basic_usage.py
